# module10

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  reflection.md
.github/workflows/: ci-cd.yml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
module10_secure_user_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_schemas.py  test_security.py  test_users_integration.py
