[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "module10-secure-user-model"
version = "0.1.0"
description = "FastAPI project for secure user models, validation, testing, and Docker deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "passlib[bcrypt]>=1.7,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
  "integration: marks tests that require the database-backed integration flow",
]
